fix: Remove custom font sizes from icons to fix spacing

--- a/src/components/socialbuttons/socialbuttons.module.css
+++ b/src/components/socialbuttons/socialbuttons.module.css
@@ -36,11 +36,3 @@
 	transform: scale(0.97);
 	opacity: 0.9;
 }
-
-.linkedin-icon {
-	font-size: 3.8rem;
-}
-
-.twitter-icon {
-	font-size: 3.5rem;
-}
